# 2EManager

./: CMakeList.txt  CMakeLists.txt  Manager.pro  README.html  README.md  app.pri  common.pri  vcpkg.json
src/: Makefile
src/CombatantDialog/: CMakeLists.txt  CombatantDialog.pro  combatantdialog.cpp  combatantdialog.h  combatantdialog.ui  main.cpp
src/CombatantDialog/include/: combatantdialog.h
src/CombatantDialog/src/: combatantdialog.cpp
src/CombatantWidget/: CMakeLists.txt  CombatantWidget.creator.user.a3321a9  CombatantWidget.files  CombatantWidget.pro  EffectListWidgetItem.h  MyMenuWidget.cpp  MyMenuWidget.h  combatantwidget.cpp  combatantwidget.h  combatantwidget.ui  main.cpp
src/CombatantWidget/include/: EffectListWidgetItem.h  MyMenuWidget.h  combatantwidget.h
src/CommandDialog/: CMakeLists.txt  CommandDialog.pro  commanddialog.cpp  commanddialog.h  commanddialog.ui  main.cpp
src/CommandIcon/: CMakeLists.txt  CommandIcon.pro  MassHealCommand.h  commandicon.cpp  commandicon.h  commandicon.ui  main.cpp  masshealcommand.cpp  resource.qrc
src/EffectDialog/: CMakeLists.txt  DataSource.h  EffectDialog.cpp  EffectDialog.files  EffectDialog.h  EffectDialog.pro  effectdialog.ui  main.cpp
src/EffectDialog/include/: EffectDialog.h
src/EffectDialog/src/: EffectDialog.cpp
src/EffectWidget/: EffectDialog.cpp  EffectDialog.h  EffectWidget.pro  effectdialog.ui  main.cpp
src/ManagerPF2E/: CMakeList.txt  CMakeLists.txt  ManagerPF2E.pro  closebletextbrowser.h  combatantmodeldelegete.cpp  combatantmodeldelegete.h  commandicon.cpp  commandicon.h  dragndropqgraphicsview.cpp  dragndropqgraphicsview.h  dragndropqwidget.cpp  dragndropqwidget.h  dragndropqwidget_commands.cpp  dragndropqwidget_commands.h  main.cpp  managerwidget.cpp  managerwidget.h  managerwidget.ui
src/ManagerPF2E/include/: dragndropqwidget.h  managerwidget.h
src/ManagerPF2E/src/: closebletextbrowser.cpp  dragndropqwidget.cpp  managerwidget.cpp  managerwidget.ui
src/Model/: CMakeLists.txt  Combatant.cpp  Combatant.h  CommandBase.cpp  CommandBase.h  CommandsCreator.cpp  CommandsCreator.h  CommandsImplementation.h  ComplexEffect.h  ComplexEffectBuilder.h  Controller.h  EffectBase.cpp  EffectBase.h  EffectClasses.h  EffectDirector.cpp  EffectDirector.h  EffectExecutor.cpp  EffectExecutor.h  FileReaderBase.h  Invoker.h  Makefile  Mediator.cpp  Mediator.h  MediatorInterface.cpp  MediatorInterface.h  Model.cpp  Model.h  SimpleEffect.cpp  SimpleEffect.h  SimpleEffectBuilder.cpp  SimpleEffectBuilder.h  SubjectBase.cpp  SubjectBase.h  TXTReader.cpp  TXTReader.h  utility.cpp  utility.h
src/Model/CommandsImplementation/: CommandsImplementation.h  DecreaseMaxHpCommand.cpp  HarmCommand.cpp  HarmCommand.h  HealCommand..h  HealCommand.cpp  HealCommand.h  MassHarmCommand.cpp  MassHarmCommand.h  MassHealCommand.cpp  MassHealCommand.h  a.out  tmp.cpp
src/Model/include/: Combatant.h  CommandBase.h  CommandsCreator.h  CommandsImplementation.h  Controller.h  EffectExecutor.h  Mediator.h  MediatorInterface.h  Model.h  SimpleEffect.h  SimpleEffectBuilder.h  Utility.h  utility.h
src/Model/include/CommandsImplementation/: DecreaseMaxHpCommand.h  HealCommand.h
src/Model/src/: CommandsCreator.cpp  EffectBase.cpp  EffectExecutor.cpp  Mediator.cpp  Model.cpp  SimpleEffect.cpp  SimpleEffectBuilder.cpp  SubjectBase.cpp  TXTReader.cpp  Utility.cpp  utility.cpp
src/Model/src/CommandsImplementation/: DecreaseMaxHpCommand.cpp  HarmCommand.cpp  HealCommand.cpp  MassHarmCommand.cpp  MassHealCommand.cpp
src/ReversePolishNotation/: CMakeLists.txt  Makefile  _CMakeLists.txt  s21_calc.c  s21_calc.gcda  s21_calc.gcno  s21_calc.h  s21_calc_test.c  s21_calc_test.gcda  s21_calc_test.gcno  s21_list_funcs.c  s21_list_funcs.gcda  s21_list_funcs.gcno  s21_main_calc_function.c  s21_main_calc_function.gcda  s21_main_calc_function.gcno  s21_parsers_definisions.c  s21_parsers_definisions.gcda  s21_parsers_definisions.gcno  s21_test.h  test
src/Saved_info/: extc_curse_info.txt  info.txt  info1.txt  info2.txt  info_malev.txt  record_ext_curse.xml
src/ValueInputDialog/: CMakeLists.txt  ValueInputDialog.pro  main.cpp  valueinputdialog.cpp  valueinputdialog.h  valueinputdialog.ui
src/pathfinder2E_manager/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managerwidget.cpp  managerwidget.h  managerwidget.ui  pathfinder2E_manager.pro  qmake_qmake_qm_files.qrc
